--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ a {
 }
 /* banner e clame */
 .wrapper {
-  height: 732px;
+  height: 695px;
   width: 100%;
   position: relative;
   background-color: #FFF3EF;
@@ -128,3 +128,13 @@ small {
   margin-top: 18px;
   display: block;
 }
+
+ .bluebanner {
+   height: 12%;
+   width: 100%;
+   background-color: #86E1D6;
+   border-top: 4px solid #007A8C;
+   border-bottom: 4px solid #007A8C;
+   position: absolute;
+   bottom: 0;
+ }
