--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,8 @@ a {
   position: relative;
   background-color: #FFF3EF;
   background-image: url(../img/jumbotron.png);
+  background-position: bottom right;
+  background-repeat: no-repeat;
 }
 
 .clame {
@@ -152,7 +154,7 @@ main {
   background-color: #F4F9FD;
 }
 /* clame 2 */
-.clame-2 {
+.title {
   text-align: center;
   padding: 55px 0 0 0;
 }
@@ -161,19 +163,14 @@ main {
   height: 190px;
 }
 
-.clame-2 h2 {
+.title h2 {
   font-size: 30px;
 }
 
-.clame-2 p {
+.title p {
   margin: 30px 0;
 }
 /* sezione box */
-.row {
-  background-color: white;
-  border-radius: 5px;
-}
-
 .imgbutton {
   width: 30%;
   text-align: center;
@@ -222,7 +219,6 @@ main {
 }
 /* row-2 */
 .column {
-  background-color: white;
   width: calc(90% / 3);
   text-align: center;
   margin-top: 45px;
@@ -255,4 +251,52 @@ main {
 
 .mid {
   margin: 45px 5%;
+}
+
+.row, .column {
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px #a5a5a5;
+}
+/* section-2 */
+.section-2 {
+  width: 100%;
+  background-image: linear-gradient(45deg,#00a4bd,#00bda5);
+  color: white;
+}
+
+.section-2 h2 {
+  font-size: 25px;
+}
+
+.section-2 p {
+  margin: 20px 0;
+}
+/* row loghi */
+.socialinfo {
+  text-align: center;
+  padding: 30px;
+  width: 25%;
+}
+
+.socialimg {
+  height: 38px;
+}
+
+.description-social p {
+  font-weight: 700;
+  font-size: 40px;
+  margin: 0px 0px;
+}
+
+.description-social span {
+  font-weight: normal;
+}
+
+.description-social small {
+  margin: 0px 0px;
+}
+
+.borderR {
+  border-right: 1px solid white;
 }
