--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ main {
 .section-3 {
   background-color: white;
 }
-
+/* costumer center */
 .costumer {
   padding-top: 30px;
 }
@@ -343,5 +343,32 @@ main {
 }
 
 .logorow-2 {
-  padding-top: 20px;
+  padding: 20px 0;
+}
+/* starttoday */
+.starttoday {
+  padding-top: 40px;
+}
+.starttoday .clame {
+  text-align: left;
+  width: 40%;
+  line-height: normal;
+  padding: 32px 0 64px 0;
+}
+
+.starttoday h1 {
+  font-size: 32px;
+
+}
+
+.starttoday p {
+  font-size: 16px;
+}
+
+.ragazzacinese {
+  float: right;
+}
+
+.ragazzacineseimg {
+  height: 350px;
 }
