--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ main {
   margin: 20px 0;
 }
 
-.column ul, footer ul {
+.column ul, .utility ul {
   text-align: left;
   list-style-type: none;
   line-height: 1;
@@ -397,7 +397,7 @@ footer h2 {
   margin-bottom: 15px;
 }
 
-footer a {
+footer a, .language a {
   color: #cbd6e2;
   font-size: 13px;
 }
@@ -411,4 +411,38 @@ footer .btn.full {
 .icon {
   font-size: 16px;
   padding-right: 15px;
+}
+/* language */
+.language {
+  text-align: center;
+  line-height: 46px;
+  border-bottom: 1px solid #cbd6e2;
+}
+/* legalstuff */
+.legal {
+  padding: 30px 0;
+}
+
+.legalstuff {
+  float: right;
+}
+
+.logowhite .legalstuff {
+  width: 50%;
+}
+
+.logowhite-img {
+  width: 100px;
+}
+
+.logowhite small {
+  margin-top: 0;
+}
+
+.logowhite-img {
+  vertical-align: bottom;
+}
+
+.legalstuff a:last-child {
+  padding-left: 15px;
 }
