--- a/css/style.css
+++ b/css/style.css
@@ -329,7 +329,7 @@ main {
 }
 
 .costumerlogo {
-  padding-top: 20px;
+  padding: 20px 30px 0 0;
   float: right;
 }
 
@@ -346,14 +346,12 @@ main {
   padding: 20px 0;
 }
 /* starttoday */
-.starttoday {
-  padding-top: 40px;
-}
+.starttoday
 .starttoday .clame {
   text-align: left;
   width: 40%;
   line-height: normal;
-  padding: 32px 0 64px 0;
+  padding: 60px 0 0 0;
 }
 
 .starttoday h1 {
@@ -363,6 +361,11 @@ main {
 
 .starttoday p {
   font-size: 16px;
+  margin: 40px 0;
+}
+
+.starttoday small {
+  margin: 40px 0;
 }
 
 .ragazzacinese {
@@ -370,7 +373,7 @@ main {
 }
 
 .ragazzacineseimg {
-  height: 350px;
+  height: 440px;
 }
 /* footer */
 footer {
