--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ header {
   width: 100%;
   font-size: 15px;
 }
+
 .top {
   border-bottom: 1px solid #007A8C;
   padding: 20px 0;
@@ -44,27 +45,27 @@ header {
 }
 
 .left, .right {
-  width: 49%;
+  width: 50%;
 }
 
 .right {
   text-align: right;
 }
 
-li:not(.first) {
+li:not(.first):not(.last) {
   text-decoration: none;
   padding: 0 14px;
 }
 
 a {
   text-decoration: none;
+  color: #007A8C;
 }
 
 .first {
   padding-right: 14px;
   border-right: 1px solid #007A8C;
 }
-
 
 .fa-globe-europe {
   padding-right: 2px;
@@ -87,6 +88,10 @@ a {
   color: white;
 }
 
+.last {
+  padding-left: 14px;
+}
+
 .bot {
   padding: 20px 0;
   background-color: white;
@@ -98,7 +103,7 @@ a {
  }
 
 .logo {
-  width: 39%;
+  width: 40%;
   text-align: left;
   vertical-align: middle;
 }
